# Xypher

./: .gitignore  Cargo.toml  README.md
frontend/: api.js  app.jsx  index.html
search_index/: .managed.json  meta.json
src/: crawler.rs  indexer.rs  main.rs  models.rs  seeds.rs  server.rs
