[package]
name = "Xypher"
version = "0.1.0"
edition = "2024"

[dependencies]
tantivy = "0.25.0"
reqwest = { version = "0.12", features = ["blocking"] }
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
async = "0.0.0"
tokio = { version= "1.48.0", features = ["full", "rt-multi-thread", "macros"] }
anyhow = "1.0.100"
